syntax = "proto3";

package replication;

option go_package = "github.com/vvatanabe/git-ha-poc/proto/replication";

message Repository {
  string user = 1;
  string repo = 2;
}

message CreateRepositoryRequest {
  Repository repository = 1;
  string remote_addr = 2;
}

message CreateRepositoryResponse {
  bytes data = 1;
}

message SyncRepositoryRequest {
  Repository repository = 1;
  string remote_addr = 2;
}

message SyncRepositoryResponse {
  bytes data = 1;
}

service ReplicationService {
  rpc CreateRepository (CreateRepositoryRequest) returns (CreateRepositoryResponse);
  rpc SyncRepository (SyncRepositoryRequest) returns (SyncRepositoryResponse);
}